# Guia_2

./: README.md
Guia_2/: README.md  pyproject.toml
Guia_2/Cuadernos/: Guia_2_Modelo_para_vinos.html  Guia_2_Modelo_para_vinos.ipynb  pyproject.toml
